evewspace/Map/static/css/map.css
#baseHeadDiv
{
    display: none;
}
#baseNavDiv
{
    margin-bottom: 5px;
}
.sig-not-updated
{
    opacity: 0.5;
    filter: alpha(opacity = 50);
}
.footer
{
    margin-bottom: 150px;
}
#sysTabHolder
{
    width: 700px;
    padding: 10px;
}
.sysDetailsFooter
{
    text-align: left;
}
.systemTooltip
{
    min-width: 300px;
    display: none;
}
.wormholeTooltip
{
    width: 250px;
    display: none;
}
.systemStatsList {
    display: inline;
    list-style: none;
}
.systemStatItem {
    display: inline-block;
    padding-right: 5px;
    padding-left: 5px;
    border-right: 1px #555 dotted;
}
.popover
{
    width: 300px;
}
.reload_hover
{
	height: 32px;
	width: 32px;
	cursor: pointer;
}
.occupiedTooltip
{
    width: 95%;
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
    border-radius: 5px;
    padding: 5px;

}
.statusText
{
    width: 95%;
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
    border-radius: 5px;

}
.infoTooltip
{
    margin-top: 10px;
    width: 95%;
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
    border-radius: 5px;
    padding: 5px;

}
.occupiedText
{
    text-align: left;
    width: 100%;
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
    border-radius: 5px;

}
.detailsLeft
{
    text-align: left;
}
.detailsLeftCombined
{
    margin-left: 40px;	
}
.infoText
{
    text-align: left;
    white-space: pre-wrap;       /* css-3 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */

}
.sysInfoUpdated
{
    text-align: left;
}
.infoTitle
{
    text-align: center;
}
.signatureListDiv
{
    text-align: left;
    white-space: nowrap;
    margin-top: 10px;
}
.sysSigsList
{
    list-style: none;
}
.posListItem
{
    list-style: none;
}
.poslist_main
{
    margin-left: 25px;
}
.posSummary
{
    margin-left: 70px;
    margin-top: -10px;
}
.sigAddFormDiv
{
    text-align: left;
}
.sysFriendlySpan
{
    text-align: center;
}
.sysLSdiv
{
    text-align: center;
}
.wormholeInfo
{
    text-align: center;
}
.sysMenuDiv
{
}
h5
{
    text-align: center;
}
#stPlaceholderDiv
{
    margin-bottom: 5px;
}
.stFleetHeader
{
    text-align: left;
}
th
{
    padding-left: 10px;
    padding-right: 10px;
}
td
{
    padding-left: 15px;
    padding-right: 10px;
}
textarea
{
    color: #000000;
}
.tip {
  background: #eee;
  opacity: 100%;
  border: 1px solid #ccc;
  padding: 10px;
  border-radius: 8px;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  position: relative;
  z-index: 3;
}

/* arrows - :before and :after */
.tip:before {
  position: absolute;
  display: inline-block;
  border-top: 7px solid transparent;
  border-right: 7px solid #eee;
  border-bottom: 7px solid transparent;
  border-right-color: rgba(0, 0, 0, 0.2);
  left: -14px;
  top: 20px;
  content: '';
}

.tip:after {
  position: absolute;
  display: inline-block;
  border-top: 6px solid transparent;
  border-right: 6px solid #eee;
  border-bottom: 6px solid transparent;
  left: -12px;
  top: 21px;
  content: '';
}

.sysInfoCombinedDiv h4 {
    clear: both;
    display: block;
    margin-top: 20px;
}
.sysInfoCombinedHr {
	width: 600px;
	border-color: #ccc; 	
}
.sigWH {
    color: #63a5ff;
}
.sigRELIC {
    color: #ff63f2;
}
.sigDATA {
    color: #9139f3;
}
.sigGAS {
    color: #f3b839;
}

#scrollmenu {
    position: fixed;
    left: 2px;
    top: 40%;
    width: 24px;
    margin: 0px;
    padding: 0px;
    z-index: 100;
}

#backtotop {
    background: url(../images/back_to_top.png);
    width: 24px;
    height: 24px;
    min-width: 24px;
    min-height: 24px;
    cursor: pointer;
    padding-bottom: 3px;
}

#tobuttons {
    background: url(../images/to_buttons.png);
    width: 24px;
    height: 24px;
    min-width: 24px;
    min-height: 24px;
    cursor: pointer;
}

label {
    display: inline;
}

label[for=massStatusReduced],label[for=sysTypeImportant] {
    font-weight: bold;
    color: #fffc00;
}

label[for=massStatusNormal], label[for=sysTypeRegular] {
    font-weight: bold;
    color: #00ff00;
}

label[for=massStatusCritical], label[for=sysTypeDangerous] {
    font-weight: bold;
    color: #ff0000;
}

#legendDiv {
    display: none;
}

#legendDiv ul.inline {
    display: inline;
}

div.activePlayerList {
    text-align: center;
}
table.activePilotsTable {
    border: 1px solid black;
    margin: auto;
}
table.activePilotsTable tr:nth-child(2n) {
    background-color: rgba(255, 255, 255, 0.04);
}
table.activePilotsTable td,
table.activePilotsTable th {
    padding: 0.1em 0.5em;
}
table.activePilotsTable td {
    border-top: 1px solid black;
    text-align: left;
}

fieldset.addSystemWormholeType {
    text-align: center;
}
fieldset.addSystemWormholeType label.checkbox {
    display: inline-block;
    padding-left: 0;
}
fieldset.addSystemWormholeType label.checkbox input[type="checkbox"] {
    float: none;
    margin: 0.8em 0.2em;
}

ul#moveDropdown li {
    cursor: pointer;
}

.sysSigsTable tr:hover {
    background-color: #2B3039;
}

#bulkSigForm {
    display: inline-block;
    margin-bottom: 8px;
}

#bulkSigForm textarea {
    margin-bottom: 0;
}

#pasteField {
    font-size: 12px;
    line-height: 12px;
    width: 380px;
    height: 3em;
}

#sysInfoTab {
    margin-bottom: 3px;
}

#sigAddForm, #sigEditForm {
    margin-bottom: 3px;
}

.sysInfoSysname {
    float: left;
    font-size: 12pt;
    display: inline;
    margin: 0px 7px 0px 3px;
    line-height: 34px;
    color: white;
}

.content {
  padding-top: 0;
}

